--- a/package.json
+++ b/package.json
@@ -1,27 +1,31 @@
 {
   "name": "tally-code-editor",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "An application to edit Tally XML files in a user-friendly way.",
+  "main": "electron.js",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"vite\" \"wait-on http://localhost:5173 && electron .\"",
     "build": "vite build",
-    "preview": "vite preview"
+    "start": "npm run build && electron .",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "auto-zustand-selectors-hook": "latest",
-    "clsx": "latest",
-    "immer": "latest",
-    "lodash.get": "latest",
-    "react": "^19.1.1",
-    "react-dom/client": "latest",
-    "zustand": "^5.0.7",
-    "zustand/middleware/immer": "latest",
-    "react-dom": "^19.1.1"
+    "auto-zustand-selectors-hook": "^2.0.0",
+    "clsx": "^2.1.1",
+    "immer": "^10.1.1",
+    "lodash.get": "^4.4.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@vitejs/plugin-react": "^4.3.1",
+    "concurrently": "^8.2.2",
+    "electron": "^31.2.1",
+    "vite": "^5.3.3",
+    "wait-on": "^7.2.0"
   }
 }
