feat: Enhance data filtering and column selection
Introduces improvements to the data filtering logic within `DataTable.jsx` and enhances the `ColumnSelectorModal.jsx` to correctly handle nested data and data provided directly from filtered views.

The `setNodeForColumnSelection` function in `store.js` has been updated to accept and store `data`, enabling the `ColumnSelectorModal` to correctly process data from filtered results. The `DataTable` component now correctly identifies and filters nested arrays, ensuring rows without matching nested data are handled appropriately.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "electron.js",
   "scripts": {
     "dev": "concurrently \"vite\" \"wait-on http://localhost:5173 && electron .\"",
+    "web": "vite",
     "build": "vite build",
     "start": "npm run build && electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
